# dragon_bot

./: .gitignore  README.md  contacts.py  interface.py  main.py  notes.pkl  notes.py  pyproject.toml  requirements.txt
dragon_bot/: __init__.py  main.py
dragon_bot.egg-info/: PKG-INFO  SOURCES.txt
dragon_bot/contacts/: __init__.py  contacts.py
dragon_bot/interface/: __init__.py  constants.py  interface.py
dragon_bot/notes/: __init__.py  notes.py
dragon_bot/writer/: __init__.py  writer.py
example/dragon_bot_data/: notes.pkl
lib/: __init__.py
lib/bot_exceptions/: __init__.py  bot_exceptions.py
lib/contacts/: __init__.py
lib/data_source/: actions.py
lib/interface/: __init__.py  interface.py
lib/notes/: __init__.py  notes.py
lib/writer/: writer.py
package/: __init__.py  main.py
package/bot_exceptions/: bot_exceptions.py
package/contacts/: __init__.py  contact.py  contact_storage.py  contacts.py  contacts_cli.py  contacts_service.py  validators.py
package/data_source/: actions.py
package/example/dragon_bot_data/: contacts.pkl
package/interface/: constants.py  interface.py
package/notes/: notes.py
package/writer/: __init__.py
