[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dragon_bot"
version = "0.1.4"
dependencies = [
    "colorama",
]
authors = [
  { name="first team" },
]
description = "The Personal Assistant Bot"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/makandriival/dragon_bot"

[project.scripts]
dragon-bot = "dragon_bot.main:main"